--- a/lstm.ipynb
+++ b/lstm.ipynb
@@ -108,7 +108,7 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "from proto.AVAGenerator import AVAGenerator"
+    "from AVA_features.AVAGenerator import  AVAGenerator"
    ],
    "metadata": {
     "collapsed": false,
@@ -317,7 +317,8 @@
     "SEQUENCE_SHAPE = (SEQ_LENGTH,ROWS,COLS,CHANNELS) # hack for 5 fps\n",
     "IMAGE_SHAPE = (ROWS,COLS,CHANNELS)\n",
     "IMAGE_TARGET_SIZE = (ROWS, COLS)\n",
-    "MODEL_NAME = 'vgg16deeplstm'\n"
+    "MODEL_NAME = 'vgg16deeplstm'\n",
+    "WORKERS = 6\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -518,7 +519,7 @@
     "csv_logger = CSVLogger(\n",
     "        os.path.join('data', 'logs', f'{MODEL_NAME}-training-{timestamp}.log'))\n",
     "\n",
-    "w = mp.cpu_count()\n",
+    "\n",
     "m.fit_generator(\n",
     "        generator=train_gen,\n",
     "        epochs=1,\n",
