xception instead of vgg16

--- a/lstm.ipynb
+++ b/lstm.ipynb
@@ -25,15 +25,10 @@
    "source": [
     "import os\n",
     "import time\n",
+    "\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras.applications import VGG16\n",
     "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping, \\\n",
-    "    CSVLogger, TensorBoard\n",
-    "from tensorflow.keras.layers import Input, GlobalAveragePooling2D, \\\n",
-    "    TimeDistributed, LSTM, Dense\n",
-    "from tensorflow.keras.models import Model\n",
-    "from tensorflow.keras.optimizers import Nadam\n",
-    "import multiprocessing as mp"
+    "    CSVLogger, TensorBoard"
    ]
   },
   {
@@ -249,45 +244,6 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
-   "source": [
-    "def lstm_model(image_shape, sequence_length, classes):\n",
-    "    (h, w, c) = image_shape\n",
-    "    sequence_shape = (sequence_length, h, w, c)\n",
-    "    video = Input(shape=sequence_shape)\n",
-    "    cnn_base = VGG16(input_shape=image_shape,\n",
-    "                     weights=\"imagenet\",\n",
-    "                     include_top=False)\n",
-    "    cnn_out = GlobalAveragePooling2D()(cnn_base.output)\n",
-    "    cnn = Model(cnn_base.input, cnn_out)\n",
-    "    cnn.trainable = False\n",
-    "    encoded_frames = TimeDistributed(cnn)(video)\n",
-    "    encoded_sequences = LSTM(64, return_sequences=True)(encoded_frames)\n",
-    "    encoded_sequence = LSTM(64)(encoded_sequences)\n",
-    "    hidden_layer = Dense(256, activation=\"relu\")(encoded_sequence)\n",
-    "    outputs = Dense(classes, activation=\"softmax\")(hidden_layer)\n",
-    "    model = Model(video, outputs)\n",
-    "    optimizer = Nadam(lr=0.002,\n",
-    "                      beta_1=0.9,\n",
-    "                      beta_2=0.999,\n",
-    "                      epsilon=1e-08,\n",
-    "                      schedule_decay=0.004)\n",
-    "    model.compile(loss=\"sparse_categorical_crossentropy\",\n",
-    "                  optimizer=optimizer,\n",
-    "                  metrics=[\"categorical_accuracy\"])\n",
-    "    return model\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
-  },
-  {
    "cell_type": "markdown",
    "source": [
     "## Training\n",
@@ -317,8 +273,9 @@
     "SEQUENCE_SHAPE = (SEQ_LENGTH,ROWS,COLS,CHANNELS) # hack for 5 fps\n",
     "IMAGE_SHAPE = (ROWS,COLS,CHANNELS)\n",
     "IMAGE_TARGET_SIZE = (ROWS, COLS)\n",
-    "MODEL_NAME = 'vgg16deeplstm'\n",
-    "WORKERS = 6\n"
+    "MODEL_NAME = 'xceptiondeeplstm'\n",
+    "WORKERS = 8\n",
+    "MAX_QUEUE_SIZE = 32"
    ],
    "metadata": {
     "collapsed": false,
@@ -460,7 +417,8 @@
     }
    ],
    "source": [
-    "m = lstm_model(IMAGE_SHAPE, SEQ_LENGTH, 2)\n",
+    "from AVA_features.models import deep_lstm_model\n",
+    "m = deep_lstm_model(IMAGE_SHAPE, SEQ_LENGTH, 2)\n",
     "m.summary()"
    ],
    "metadata": {
@@ -523,11 +481,11 @@
     "m.fit_generator(\n",
     "        generator=train_gen,\n",
     "        epochs=1,\n",
-    "        verbose = 2,\n",
+    "        verbose = 1,\n",
     "        validation_data=val_gen,\n",
     "        use_multiprocessing=True,\n",
-    "        max_queue_size=2*w,\n",
-    "        workers=w,\n",
+    "        max_queue_size=MAX_QUEUE_SIZE,\n",
+    "        workers=WORKERS,\n",
     "        shuffle = False, # custom shuffle already\n",
     "        callbacks=[checkpointer, tb, early_stopper]\n",
     ")"
